[tool.poetry]
name = "bottest"
version = "0.1.1"
description = ""
authors = ["tily <tidnlyam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
langchain = "^0.1.6"
slack-bolt = "^1.18.1"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
