[tool.poetry]
name = "bottest"
version = "0.1.1"
description = ""
authors = ["tily <tidnlyam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.12.0"
langchain = "^0.1.6"
slack-bolt = "^1.18.1"
langchain-openai = "^0.0.5"
duckduckgo-search = "^4.4.1"
langchain-community = "^0.0.19"
playwright = "^1.41.2"
lxml = "^5.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
