[tool.poetry]
name = "sakutto"
version = "0.1.0"
description = ""
authors = ["tily"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.11.0"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
pypdf = "^4.0.1"
tiktoken = "^0.5.2"
chromadb = "^0.4.22"
langchain-experimental = "^0.0.50"
numexpr = "^2.9.0"
duckduckgo-search = "^4.4"
torch = "^2.2.0"
loguru = "0.7.2"
streamlit = "^1.31.0"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
